<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background1">

        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorization"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text"
            android:gravity="center"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:inputType="phone"
        android:hint="@string/phone"
        android:id="@+id/phone"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginBottom="15dp" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:inputType="textAutoComplete"
            android:hint="@string/name"
            android:id="@+id/Name"
            android:background="@drawable/edit_text_background"
            android:padding="15dp" />

        <Button
            android:layout_width="175dp"
            android:layout_gravity="center"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorGasoline"
            android:text="@string/register"
            android:id="@+id/register"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>