<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background1">

        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirmation"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/confirm"
            android:gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:inputType="number"
            android:hint="@string/code"
            android:id="@+id/code"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="175dp"
            android:layout_gravity="center"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorGasoline"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:id="@+id/Next"/>

    </LinearLayout>

</LinearLayout>